# eric-py

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: python-api.md
eric/: facade.py  loader.py  versioning.py
eric_py/: api.py
examples/: m2a_walking_skeleton.py
tests/: conftest.py  test_eric_integration.py  test_errors.py  test_versioning.py
