[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eric-py"
version = "0.1.0"
description = "Python bindings and helpers for ERiC (ELSTER Rich Client)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [{ name = "eric-py maintainers" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/your-org/eric-py"

[tool.setuptools.packages.find]
include = ["eric*"]

